fix: address Copilot review comments - replica-level raw API and soft-delete fixes
- Add migration 024: fix benchmark_services unique constraint for soft-delete compatibility
  - Drop existing UNIQUE(benchmark_id, service_id) constraint
  - Create partial unique index WHERE deleted_at IS NULL (PostgreSQL only)
- Update OpenAPI schema: expose replica-level time series in raw API
  - Add RawReplicaTimeSeriesDTO with replicaId, containerId, dataPoints
  - Change RawServiceTimeSeriesDTO to use replicas array instead of dataPoints
- Update BenchmarkRunServiceImpl: group metrics by replica ID for separate time series
  - No flattening of metrics across replicas
  - Each replica has its own dataPoints array
- Narrow exception handling in AgentServiceImpl.findOrCreateReplica
  - Only retry for unique constraint violations (ConstraintViolationException)
  - Rethrow other DataIntegrityViolationException for 500 errors
- Add missing stub in ServiceServiceImplTest for replica lookup
- Update BenchmarkRunRawIT test for new replica-level structure

Breaking change: Raw API now exposes replica-level metrics instead of service-level